packages/web/pages/test/index.css
/* Header */
.header{
  height: auto;
  
  background: var(--dark-900); 
  
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  /* flex-direction: column; */
  
  z-index: 1;
}

.social-icons{
  display: flex;
  flex-direction: row;
}

.facebook-anchor:hover .facebook-icon path{
  stroke: var(--accent);
}

.instagram-anchor:hover .instagram-icon path{
  stroke: var(--accent);
}

.twitter-anchor:hover .twitter-icon path{
  stroke: var(--accent);
}

/* ### */
/* ### */
.header-svg{
  width: 12em;
  height: 6em;
  
  margin-top: 0.25em;
}
/* ### */
/* ### */

/* ### */
/* ### */
.user-controls{
  display: flex;
  flex-direction: row;
}

.search-anchor:hover .search-icon path{
  stroke: var(--accent);
}

.user-anchor:hover .user-icon path{
  stroke: var(--accent);
}

.cart-anchor:hover .cart-icon path{
  stroke: var(--accent);
}
/* #### */
/* ### */

/* ### */
/* ### */
.nav{
  background: var(--nav-bg);
  
  border-bottom: 5px solid var(--accent);
}

.nav a{
  font-family: var(--ff-montserrat);
  font-size: var(--paragraph);
  font-weight: 400;
  text-transform: uppercase;
  
  color: var(--link);
  
  transition: var(--transition);
  
  display: flex;
  align-items: center;
  
  padding: 1rem 2rem;
}

nav a:hover,
nav a:hover svg path,
nav a:focus,
nav a:focus svg path{
  color: var(--accent);
  stroke: var(--accent);
  
  transition: var(--transition);
  
  cursor: pointer;
}

.nav-unordered-list{
  display: flex;
  list-style-type: none;
  justify-content: space-evenly;
}

.nav-unordered-list ul{
  width: 100%;
}
.nav-unordered-list li{
  position: relative;
}

.nav-unordered-list li:hover .nav-item-drop_1,
.nav-unordered-list li:focus-within .nav-item-drop_1{
  top: auto;
  animation: dropdown 0.2s forwards;
}

.nav-item-drop_1 li:not(:first-child) ul{
  border-top: 5px solid var(--accent);
  
}

.nav-item-drop_1 li:last-child {
  border-bottom: 5px solid var(--accent);
}

.nav-item-drop_1 li a{
  font-size: clamp(0.7em, 1vw, 1em);
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  
  display: flex;
  text-align: left;
  justify-content: start;
  
  margin: 0.5rem;
  padding: 0.5rem;
}

.nav-item-drop_1{
  background: var(--drop-bg);
  
  position: absolute;
  top: -900px;
  
  display: flex;
  flex-direction: column;
  
  opacity: 0;
  
  border-top: 5px solid var(--accent);
}

.nav-item-drop_2,
.nav-item-drop_3{
  background: var(--drop-bg);
  
  position: absolute;
  top: -900px;
  left: 100%;
  
  display: flex;
  flex-direction: column;
  
  opacity: 0;
}

.nav-item-drop_1 li:hover .nav-item-drop_2,
.nav-item-drop_1 li:focus-within .nav-item-drop_2{
  top: 0;
  opacity: 1;
  animation: dropdown 0.2s forwards;
}

.nav-item-drop_2 li:hover .nav-item-drop_3,
.nav-item-drop_2 li:focus-within .nav-item-drop_3{
  top: 0px;
  animation: dropdown 0.2s forwards;
}

.nav-item-drop_1 li:not(:first-child) .nav-item-drop_2 li:hover ul.nav-item-drop_3,
.nav-item-drop_1 li:not(:first-child) .nav-item-drop_2 li:focus-within ul.nav-item-drop_3{
  top: -10%;
  animation: dropdown 0.2s forwards;
}
/* ### */
/* ### */

/* ### */
/* ### */
.main-section{
  padding: 10em 4em;
}

.section-title{
  font-size: clamp(1.5em, 2vw, 2.5em);
  font-family: var(--ff-josefin-sans);
  font-weight: 400;
  
  margin: 0.25em 0em;
}

.section-paragraph{
  font-size: clamp(1em, 2vw, 1.35em);
  font-family: var(--ff-josefin-sans);
  font-weight: 300;
}
/* ### */
/* ### */

/* ### */
/* ### */
/* Footer */
svg#gradient{
  position: absolute;
}

.footer-wrap{
  font-family: var(--ff-josefin-sans);
  font-size: 1.5rem;
  font-weight: 300;
  
  background: black;
  border-top: 5px solid var(--accent);
  
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  flex-wrap: wrap;
  
  padding: 1em;
}

.footer-about-us{
  padding-top: 2em;
  padding-left: 2em;
  padding-right: 2em;

}

.footer-title{
  font-size: clamp(1em, 2vw, 1.5em);
  font-weight: 500;
  
  color: var(--accent);
  
  position: relative;
  
  transition: var(--transition);
  
  margin-bottom: 15px;
}

.footer-title:before {
  content: "";
  position: absolute;
  
  background: var(--accent);
  
  width: 50px;
  height: 2px;
  left: 0;
  bottom: -2px;
}

.footer-paragraph{
  max-width: 50ch;

  font-size: clamp(0.8em, 2vw, 1em);
  
  transition: var(--transition);
  
  padding-top: 0.2em;
  padding-bottom: 0.7em;
  
}

#social-media-footer {
  display: flex;
  
  margin-left: -0.2em;
}

#social-media-footer li:nth-child(2) {
  margin: 0 0.5rem;
}

#social-media-footer li a:hover svg path,
#social-media-footer li a:focus svg path {
  stroke: var(--accent);
}

.footer-contact-us{
  line-height: 2.5rem;

  padding-top: 2em;
  padding-left: 2em;
  padding-right: 2em;
}

.footer-contact-us a{
  text-decoration: none;
  
  color: var(--link);
  
  transition: var(--transition);
}

.footer-contact-us ul li:hover a,
.footer-contact-us ul li:focus-within a {
  color: var(--accent);
}

.info{
  font-size: clamp(0.8em, 2vw, 1em);
}

.footer-quick-links {
  position: relative;
  
  line-height: 2.5rem;

  padding-top: 2em;
  padding-left: 2em;
  padding-right: 2em;
}

.footer-quick-links ul li a {
  text-decoration: none;
  
  color: var(--link);
  
  transition: var(--transition);
}

.footer-quick-links ul li:hover a,
.footer-quick-links ul li:focus-within a{
  color: var(--accent);
}

.links-list{
  font-size: clamp(0.8em, 2vw, 1em);
}

.footer-logo{
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  
  padding: 1em 0em;
}

.footer-logo-svg {
  width: 15em;
  height: 5em;
}

.copyright {
  font-family: var(--ff-josefin-sans);
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  
  border-top: 1px solid #fff;
  background: black;
  color: rgb(255, 255, 255);
  
  padding: 0.7em 0em;
}

